--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Check if a url is an image",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha index.test.js"
   },
   "author": {
     "name": "wzbg",
@@ -36,6 +36,11 @@
   "dependencies": {
     "is-image": "^1.0.1",
     "is-url": "^1.2.1",
-    "sync-request": "^4.0.2"
+    "request": "^2.88.2",
+    "request-promise-native": "^1.0.8"
+  },
+  "devDependencies": {
+    "mocha": "^8.0.1",
+    "nock": "^12.0.3"
   }
 }
