--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "is-image-url",
-  "version": "1.1.9",
-  "description": "Check if a url is an image",
+  "name": "is-image-fast",
+  "version": "1.0.0",
+  "description": "Check if a url is an image using HTTP HEAD",
   "main": "index.js",
   "scripts": {
     "test": "mocha index.test.js"
   },
   "author": {
-    "name": "wzbg",
-    "email": "z3530515@gmail.com"
+    "name": "Chris Jensen",
+    "email": "chris@raisely.com"
   },
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/wzbg/is-image-url"
+    "url": "https://github.com/chrisjensen/is-image-fast"
   },
   "bugs": {
-    "url": "https://github.com/wzbg/is-image-url/issues"
+    "url": "https://github.com/chrisjensen/is-image-fast/issues"
   },
-  "homepage": "https://github.com/wzbg/is-image-url#readme",
+  "homepage": "https://github.com/chrisjensen/is-image-fast#readme",
   "keywords": [
     "check",
     "url",
@@ -34,7 +34,6 @@
     "gif"
   ],
   "dependencies": {
-    "is-image": "^1.0.1",
     "is-url": "^1.2.1",
     "request": "^2.88.2",
     "request-promise-native": "^1.0.8"
