Update readme and license

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "name": "Chris Jensen",
     "email": "chris@raisely.com"
   },
-  "license": "MIT",
+  "license": "NoHarm",
   "repository": {
     "type": "git",
     "url": "https://github.com/chrisjensen/is-image-fast"
